--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,12 +24,14 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
-
 r.SkinCache.CompileShaders=True
-
 r.RayTracing=True
-
 r.Shadow.Virtual.Enable=1
+r.GPUSkin.Support16BitBoneIndex=True
+r.GPUSkin.UnlimitedBoneInfluences=True
+r.SkinCache.BlendUsingVertexColorForRecomputeTangents=2
+r.SkinCache.DefaultBehavior=0
+SkeletalMesh.UseExperimentalChunking=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -45,4 +47,7 @@ DefaultMediaSoundClassName=/Game/Sound/MyMAster.MyMAster
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 bEnableWorldPartition=True
+
+[ConsoleVariables]
+fx.Niagara.ForceLastTickGroup=1
 
